--- a/client/src/components/InfoBar/InfoBar.css
+++ b/client/src/components/InfoBar/InfoBar.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 .infoBar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #2979FF;
+    background: #670d10;
     border-radius: 4px 4px 0 0;
     height: 60px;
     width: 100%;
@@ -14,6 +15,7 @@
     align-items: center;
     margin-left: 5%;
     color: white;
+    font-family: 'Lobster', cursive;
   }
   
   .rightInnerContainer {
