--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -19,9 +19,10 @@
     color: #fff !important;
     text-transform: uppercase;
     text-decoration: none;
-    background: #2979FF;
+    background: #670d10;
     padding: 20px;
     display: inline-block;
     border: none;
     width: 20%;
+
   }
